postgrest-with-signin

--- a/supervisord.conf
+++ b/supervisord.conf
@@ -83,12 +83,49 @@ serverurl=unix:///tmp/supervisor.sock ; use a unix:// URL  for a unix socket
 ; Create one or more 'real' program: sections to be able to control them under
 ; supervisor.
 
-[program:swap]
-command=gunicorn swap:app
+[program:cloud_events]
+command=python3 cloud_events.py
 autostart=true
 autorestart=true
 redirect_stderr=true
-stdout_logfile=swap.log
+directory=/home/vbalasubramaniam
+stdout_logfile=/home/vbalasubramaniam/cloud_events.log
+startretries=10000
+
+[program:pgadmin4]
+command=sudo gunicorn --bind 0.0.0.0:9876 --workers=1 --threads=25 --chdir /usr/local/lib/python3.7/dist-packages/pgadmin4 pgAdmin4:app
+autostart=true
+autorestart=true
+redirect_stderr=true
+directory=/home/vbalasubramaniam
+stdout_logfile=/home/vbalasubramaniam/pgadmin4.log
+startretries=10000
+
+[program:pgagent]
+command=pgagent hostaddr=127.0.0.1 dbname=postgres user=trifacta
+;autostart=true
+;autorestart=true
+redirect_stderr=true
+directory=/home/vbalasubramaniam
+stdout_logfile=/home/vbalasubramaniam/pgagent.log
+;startretries=10000
+
+[program:db_access]
+command=gunicorn db_access:app
+autostart=true
+autorestart=true
+redirect_stderr=true
+stdout_logfile=db_access.log
+directory=/home/vbalasubramaniam/db_access
+
+[program:postgrest]
+command=/home/vbalasubramaniam/postgrest/postgrest postgrest.conf
+autostart=true
+autorestart=true
+redirect_stderr=true
+stdout_logfile=postgrest.log
+directory=/home/vbalasubramaniam/postgrest
+
 
 ;[program:theprogramname]
 ;command=/bin/cat              ; the program (relative uses PATH, can take args)
